# TRAFFIC_CV

backend/: .env  Cargo.toml
backend/src/: main.rs
backend/src/management_engine/: mod.rs
backend/src/management_engine/api/: auth.rs  mod.rs  operator_api.rs
backend/src/management_engine/clients/: mod.rs
backend/src/management_engine/clients/clients/auth/: auth.rs
backend/src/management_engine/clients/requests/: auth.rs
backend/src/management_engine/clients/traits/: auth.rs
backend/src/management_engine/controllers/auth/: auth.rs
backend/src/management_engine/models/auth/: auth.rs  models.rs
frontend/: .gitignore  index.html  package-lock.json  package.json
frontend/src/: App.jsx  main.jsx
frontend/src/api/: auth.js
frontend/src/assets/: login.css  register.css
frontend/src/components/: Dashboard.jsx  Login.jsx  Register.jsx
generator/: Cargo.toml
generator/src/: main.rs
