[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = "1"
actix-web = { version = "4", features = ["rustls-0_23"] }
actix-web-lab = "0.24"
actix-cors = { version = "0.7" }
sqlx = { version = "0.7.4", features = ["postgres", "macros", "runtime-tokio-rustls", "bigdecimal", "chrono"] }
bigdecimal = "0.3"

# Debugging
dotenvy = "0.15"
env_logger = { version = "0.11" }
utoipa = { version = "5", features = [
    "chrono",
    "uuid",
    "debug",
    "actix_extras",
] }
utoipa-actix-web = "0.1"
utoipa-swagger-ui = { version = "9", features = ["actix-web", "debug-embed"] }
utoipa-redoc = { version = "6.0.0", features = ["actix-web"] }

# Encoding and parsing
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
bcrypt = "0.17"
base64 = "0.22"
regex = "1"
jsonwebtoken = { version = "10.1.0", features = ["rust_crypto"] }


# Web and TLS
rustls-pemfile = "2"
reqwest = { version = "0.12", features = ["blocking", "json"] }

# Utilities
tracing = "0.1"
anyhow = "1"
async-trait = "0.1"
maplit = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing-subscriber = "0.3"

thiserror = "2"

